#VRML_SIM R2025a utf8
PROTO SteelBall [ field SFVec3f translation 0 0 0.01 ] {
  Solid {
    translation IS translation
    children [
      Shape {
        appearance PBRAppearance { baseColor 0.5 0.5 0.5 metallic 1 roughness 0.3 }
        geometry Sphere { radius 0.01 }
      }
    ]
    name "SteelBall"
    boundingObject Sphere { radius 0.01 }
    physics Physics { density 7800 }
  }
}