#VRML_SIM R2025a utf8
EXTERNPROTO "PingBall.proto"
EXTERNPROTO "SteelBall.proto"

PROTO UnibotsBallsRandom [] {
  Group {
    children [


      DEF PING01 PingBall { solidName "PING01_solid_random" translation -0.375913 0.031753 0.150000 rotation -0.212506 0.689780 -0.692131 4.789301 }
      DEF PING02 PingBall { solidName "PING02_solid_random" translation -0.479668 0.070677 0.150000 rotation 0.764391 -0.363180 0.532735 1.896240 }
      DEF PING03 PingBall { solidName "PING03_solid_random" translation -0.167051 -0.471426 0.150000 rotation 0.630206 -0.241078 0.738053 2.163595 }
      DEF PING04 PingBall { solidName "PING04_solid_random" translation -0.767270 -0.030862 0.150000 rotation -0.428986 -0.691785 -0.580865 0.458593 }
      DEF PING05 PingBall { solidName "PING05_solid_random" translation -0.879799 -0.817541 0.150000 rotation 0.657328 0.176545 -0.732634 6.215554 }
      DEF PING06 PingBall { solidName "PING06_solid_random" translation 0.032598 -0.071662 0.150000 rotation -0.532833 -0.146197 -0.833496 3.622968 }
      DEF PING07 PingBall { solidName "PING07_solid_random" translation 0.670421 -0.222951 0.150000 rotation -0.958744 0.213975 -0.187151 0.405417 }
      DEF PING08 PingBall { solidName "PING08_solid_random" translation -0.339324 0.655356 0.150000 rotation -0.351460 0.648297 -0.675416 4.813477 }
      DEF PING09 PingBall { solidName "PING09_solid_random" translation 0.446263 0.739601 0.150000 rotation -0.575041 -0.817847 -0.021314 2.425548 }
      DEF PING10 PingBall { solidName "PING10_solid_random" translation 0.138900 0.135021 0.150000 rotation 0.585369 -0.487745 0.647648 5.305385 }
      DEF PING11 PingBall { solidName "PING11_solid_random" translation -0.190312 0.659469 0.150000 rotation -0.762027 0.615125 -0.202328 4.817402 }
      DEF PING12 PingBall { solidName "PING12_solid_random" translation -0.055097 -0.345390 0.150000 rotation 0.638926 -0.064247 0.766581 1.193794 }
      DEF PING13 PingBall { solidName "PING13_solid_random" translation -0.575246 -0.123636 0.150000 rotation -0.279672 0.909163 0.308556 0.158571 }
      DEF PING14 PingBall { solidName "PING14_solid_random" translation -0.048688 0.024914 0.150000 rotation 0.522339 -0.238006 0.818850 2.057408 }
      DEF PING15 PingBall { solidName "PING15_solid_random" translation 0.875621 -0.860065 0.150000 rotation -0.681797 -0.633115 0.366495 3.034740 }
      DEF PING16 PingBall { solidName "PING16_solid_random" translation -0.436040 -0.056232 0.150000 rotation -0.625315 -0.270006 -0.732174 0.547609 }
      DEF STEEL01 SteelBall { solidName "STEEL01_solid_random" translation -0.400092 0.896609 0.150000 rotation -0.055221 -0.932225 0.357640 2.893630 }
      DEF STEEL02 SteelBall { solidName "STEEL02_solid_random" translation -0.768816 -0.180200 0.150000 rotation -0.540597 0.840929 -0.024349 2.433686 }
      DEF STEEL03 SteelBall { solidName "STEEL03_solid_random" translation 0.661053 -0.758984 0.150000 rotation 0.679634 -0.712669 0.173783 1.469804 }
      DEF STEEL04 SteelBall { solidName "STEEL04_solid_random" translation 0.698007 0.755006 0.150000 rotation -0.730800 0.150063 -0.665892 0.295914 }
      DEF STEEL05 SteelBall { solidName "STEEL05_solid_random" translation 0.064415 0.424911 0.150000 rotation 0.707862 -0.407464 -0.576979 6.044219 }
      DEF STEEL06 SteelBall { solidName "STEEL06_solid_random" translation -0.719403 -0.508084 0.150000 rotation 0.431250 -0.103823 0.896239 1.001022 }
      DEF STEEL07 SteelBall { solidName "STEEL07_solid_random" translation 0.515171 0.599798 0.150000 rotation 0.591844 -0.728707 0.344538 6.070652 }
      DEF STEEL08 SteelBall { solidName "STEEL08_solid_random" translation -0.850490 -0.548129 0.150000 rotation -0.532074 0.257205 0.806686 0.385243 }
      DEF STEEL09 SteelBall { solidName "STEEL09_solid_random" translation -0.619825 0.594088 0.150000 rotation -0.074070 -0.626355 0.776011 1.517185 }
      DEF STEEL10 SteelBall { solidName "STEEL10_solid_random" translation 0.441811 -0.508156 0.150000 rotation -0.474543 0.545784 -0.690600 3.889443 }
      DEF STEEL11 SteelBall { solidName "STEEL11_solid_random" translation -0.360590 0.054451 0.150000 rotation -0.305609 0.662918 0.683478 2.650021 }
      DEF STEEL12 SteelBall { solidName "STEEL12_solid_random" translation -0.408191 -0.850004 0.150000 rotation 0.136673 0.079941 0.987385 4.819203 }
      DEF STEEL13 SteelBall { solidName "STEEL13_solid_random" translation 0.860933 -0.698369 0.150000 rotation -0.373684 0.535834 -0.757128 0.700393 }
      DEF STEEL14 SteelBall { solidName "STEEL14_solid_random" translation 0.484699 -0.600585 0.150000 rotation 0.581218 0.550981 0.598837 5.245109 }
      DEF STEEL15 SteelBall { solidName "STEEL15_solid_random" translation 0.464335 -0.475498 0.150000 rotation 0.346045 -0.827830 0.441532 1.074071 }
      DEF STEEL16 SteelBall { solidName "STEEL16_solid_random" translation 0.248797 0.679466 0.150000 rotation -0.685652 0.709699 -0.161895 2.952765 }
      DEF STEEL17 SteelBall { solidName "STEEL17_solid_random" translation 0.064923 0.090618 0.150000 rotation -0.192027 -0.509786 -0.838596 4.000209 }
      DEF STEEL18 SteelBall { solidName "STEEL18_solid_random" translation -0.189330 -0.139364 0.150000 rotation -0.359717 -0.273245 0.892155 1.119438 }
      DEF STEEL19 SteelBall { solidName "STEEL19_solid_random" translation 0.118224 0.586131 0.150000 rotation 0.648266 -0.480391 0.590741 0.353705 }
      DEF STEEL20 SteelBall { solidName "STEEL20_solid_random" translation 0.245362 0.003114 0.150000 rotation 0.813564 -0.569999 0.114955 0.212828 }
      DEF STEEL21 SteelBall { solidName "STEEL21_solid_random" translation -0.621391 0.190863 0.150000 rotation -0.454126 0.684876 -0.569837 5.098512 }
      DEF STEEL22 SteelBall { solidName "STEEL22_solid_random" translation 0.735421 0.334578 0.150000 rotation -0.940327 0.262352 -0.216693 4.050771 }
      DEF STEEL23 SteelBall { solidName "STEEL23_solid_random" translation 0.151727 0.740235 0.150000 rotation -0.855709 -0.475342 0.204482 3.567539 }
      DEF STEEL24 SteelBall { solidName "STEEL24_solid_random" translation -0.868296 -0.362595 0.150000 rotation 0.651392 -0.720407 0.238124 5.700829 }

    ]
  }
}
